c/examples/writing-a-c-compiler-tests/tests/chapter_15/valid/subscripting/subscript_precedence.c
int main(void) {
    int arr[3] = {1, 2, 3};
    return (-arr[2] == -3);
}