c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_array_declarator_3.c
int main(void) {
    // array size specifier must follow identifier
    int [3] arr  = {1, 2, 3};
    return 0;
}